crates/solidity/testing/snapshots/bindings_output/yul/stack_assign/generated/0.6.0-failure.txt
# This file is generated automatically by infrastructure scripts (crates/solidity/outputs/cargo/tests/src/bindings_output/runner.rs). Please don't edit by hand.

Parse errors:
Error: Expected CloseBrace or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or OpenBrace or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or YulBreakKeyword or YulContinueKeyword or YulDecimalLiteral or YulForKeyword or YulFunctionKeyword or YulHexLiteral or YulIdentifier or YulIfKeyword or YulLeaveKeyword or YulLetKeyword or YulSwitchKeyword.
   ╭─[input.sol:6:13]
   │
 6 │ ╭─▶             =: x
 7 │ ├─▶         }
   │ │               
   │ ╰─────────────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract YulStackAssignment {
   │          ─────────┬────────  
   │                   ╰────────── name: 1
 2 │     function test() public {
   │              ──┬─  
   │                ╰─── name: 2
   │ 
 4 │             let x := 0
   │                 ┬  
   │                 ╰── name: 3
 5 │             sload(10)
   │             ──┬──  
   │               ╰──── ref: built-in
───╯
Definiens: 
   ╭─[input.sol:1:1]
   │
 1 │ ╭─│ ▶ contract YulStackAssignment {
 2 │ │ ╭─▶     function test() public {
   ┆ ┆ ┆   
 4 │ │ │               let x := 0
   │ │ │                   ┬  
   │ │ │                   ╰── definiens: 3
   ┆ ┆ ┆   
 8 │ │ ├─▶     }
   │ │ │           
   │ │ ╰─────────── definiens: 2
 9 │ ├───▶ }
   │ │         
   │ ╰───────── definiens: 1
───╯
